stage 3 continue work